err/ostrich.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/ostrich'...
Compiling './lib/python3.5/site-packages/ostrich/stats.py'...
***   File "./lib/python3.5/site-packages/ostrich/stats.py", line 26
    return dict(map(lambda (k, gauge): (k, gauge()), self.gauges.items()))
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ostrich/stats_collection.py'...
***   File "./lib/python3.5/site-packages/ostrich/stats_collection.py", line 21
    return dict(map(lambda (k, counter): (k, counter.get(reset)), self.counters.items()))
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ostrich/test'...
Listing './lib/python3.5/site-packages/ostrich/test/unit'...
Listing './lib/python3.5/site-packages/ostrich/twisted'...
Listing './lib/python3.5/site-packages/ostrich-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
